--- a/Dl.ipynb
+++ b/Dl.ipynb
@@ -434,7 +434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "PcMZch46jlBt"
       },
@@ -504,6 +504,12 @@
         "      return (np.exp(-x))/((np.exp(-x)+1)**2)\n",
         "    return 1/(1 + np.exp(-x))\n",
         "\n",
+        "  def identity(self, x, derivative=False):\n",
+        "    if derivative:\n",
+        "      return 1\n",
+        "    return x\n",
+        "\n",
+        "\n",
         "  def tan_h(self, x, derivative=False):\n",
         "    t=np.tanh(x)\n",
         "    if derivative:\n",
@@ -548,9 +554,12 @@
         "        h['h'+str(i)]=self.tan_h(a['a'+str(i)])\n",
         "      elif self.activation_func=='sigmoid':\n",
         "        h['h'+str(i)]=self.sigmoid(a['a'+str(i)])\n",
-        "      if self.activation_func=='relu':\n",
+        "      elif self.activation_func=='relu':\n",
         "        h['h'+str(i)]=self.relu(a['a'+str(i)])\n",
-        "       \n",
+        "      elif self.activation_func=='identity':\n",
+        "        h['h'+str(i)]=self.identity(a['a'+str(i)])\n",
+        "\n",
+        "\n",
         "    a['a'+str(L-1)]= params['W'+str(L-1)] @ (h['h'+str(L-2)]) +params['b'+str(L-1)]\n",
         "    y_prob=[]\n",
         "    for i in range(len(a['a'+str(L-1)][0])):\n",
@@ -592,6 +601,9 @@
         "          delta_params['a' + str(i-1)] = delta_params['h' + str(i-1)] * self.sigmoid(a['a' + str(i-1)], derivative=True)  \n",
         "        elif self.activation_func=='relu':\n",
         "          delta_params['a' + str(i-1)] = delta_params['h' + str(i-1)] * self.relu(a['a' + str(i-1)], derivative=True)  \n",
+        "        elif self.activation_func=='identity':\n",
+        "          delta_params['a' + str(i-1)] = delta_params['h' + str(i-1)] * self.identity(a['a' + str(i-1)], derivative=True)  \n",
+        "\n",
         "\n",
         "    return delta_params\n",
         "  \n",
